// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should render correctly when total items is 0 1`] = `
.c4 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1 > li {
  margin: 0;
}

.c2 {
  height: 4rem;
  width: 4rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 2rem;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  background: #ffffff;
  background: #ffffff;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2 > .c3,
.c2 .c3 {
  margin: 4px;
  padding: 4px;
}

.c2 > .c3 > path,
.c2 .c3 > path {
  fill: #435465;
}

.c2 > .c3 > path,
.c2 .c3 > path {
  fill: #C7D0D8;
}

<div>
  <ul
    class="c0 c1"
  >
    <li>
      <button
        class="sc-AxgMl c2"
        disabled=""
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
    <li>
      <button
        class="sc-AxgMl c2"
        disabled=""
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the default props 1`] = `
.c4 {
  overflow: visible;
  font-size: 2.4rem;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  cursor: inherit;
}

.c4 * {
  fill-opacity: 1;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  fill: #607890;
}

.c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1 > li {
  margin: 0;
}

.c5 {
  height: 4rem;
  width: 4rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 2rem;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  margin: 4px;
  height: 3.2rem;
  width: 3.2rem;
  font-weight: bold;
  color: #126AFA;
  background: #E7F0FF;
}

.c5:hover {
  cursor: pointer;
}

.c5:focus {
  outline: none;
}

.c5:disabled {
  cursor: not-allowed;
}

.c5:hover {
  color: #126AFA;
  background: #E7F0FF;
}

.c5:active {
  color: #13181D;
  background: #eff2f4;
  font-weight: bold;
}

.c6 {
  height: 4rem;
  width: 4rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 2rem;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  margin: 4px;
  height: 3.2rem;
  width: 3.2rem;
  font-weight: 600;
  color: #435465;
  background: #ffffff;
}

.c6:hover {
  cursor: pointer;
}

.c6:focus {
  outline: none;
}

.c6:disabled {
  cursor: not-allowed;
}

.c6:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c6:active {
  color: #13181D;
  background: #eff2f4;
  font-weight: bold;
}

.c2 {
  height: 4rem;
  width: 4rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 2rem;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  background: #ffffff;
  background: #ffffff;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2 > .c3,
.c2 .c3 {
  margin: 4px;
  padding: 4px;
}

.c2 > .c3 > path,
.c2 .c3 > path {
  fill: #435465;
}

.c2 > .c3 > path,
.c2 .c3 > path {
  fill: #C7D0D8;
}

.c8 {
  height: 4rem;
  width: 4rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 2rem;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  background: #ffffff;
}

.c8:hover {
  cursor: pointer;
}

.c8:focus {
  outline: none;
}

.c8:disabled {
  cursor: not-allowed;
}

.c8 > .c3,
.c8 .c3 {
  margin: 4px;
  padding: 4px;
}

.c8 > .c3 > path,
.c8 .c3 > path {
  fill: #435465;
}

.c8:hover {
  background: #F7F8F9;
}

.c8:hover > .c3 > path,
.c8:hover .c3 > path {
  fill: #303C48;
}

.c8:active {
  background: #eff2f4;
}

.c8:active > .c3 > path,
.c8:active .c3 > path {
  fill: #13181D;
}

<div>
  <ul
    class="c0 c1"
  >
    <li>
      <button
        class="sc-AxgMl c2"
        disabled=""
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
    <li>
      <button
        class="sc-AxgMl c5"
      >
        1
      </button>
    </li>
    <li>
      <button
        class="sc-AxgMl c6"
      >
        2
      </button>
    </li>
    <li>
      <button
        class="sc-AxgMl c6"
      >
        3
      </button>
    </li>
    <li>
      <div
        class="c7"
        id="medly-popover-wrapper"
      >
        <button
          class="sc-AxgMl c6"
        >
          ...
        </button>
      </div>
    </li>
    <li>
      <button
        class="sc-AxgMl c6"
      >
        8
      </button>
    </li>
    <li>
      <button
        class="sc-AxgMl c8"
      >
        <svg
          class="c3 c4"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Pagination component should render correctly with all the props given 1`] = `
.c4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 li {
  margin: 0 0.4rem;
}

.c0 li:last-child {
  margin-right: 0.8rem;
}

.c0 li:first-child {
  margin-left: 0.8rem;
}

.c1 > li {
  margin: 0;
}

.c2 {
  height: 4rem;
  width: 4rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 2rem;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  margin: 4px;
  height: 3.2rem;
  width: 3.2rem;
  font-weight: bold;
  color: #126AFA;
  background: #E7F0FF;
}

.c2:hover {
  cursor: pointer;
}

.c2:focus {
  outline: none;
}

.c2:disabled {
  cursor: not-allowed;
}

.c2:hover {
  color: #126AFA;
  background: #E7F0FF;
}

.c2:active {
  color: #13181D;
  background: #eff2f4;
  font-weight: bold;
}

.c3 {
  height: 4rem;
  width: 4rem;
  display: block;
  border-radius: 50%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: none;
  padding: 0;
  font-weight: 600;
  font-size: 1.2rem;
  line-height: 2rem;
  text-align: center;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
  margin: 4px;
  height: 3.2rem;
  width: 3.2rem;
  font-weight: 600;
  color: #435465;
  background: #ffffff;
}

.c3:hover {
  cursor: pointer;
}

.c3:focus {
  outline: none;
}

.c3:disabled {
  cursor: not-allowed;
}

.c3:hover {
  color: #303C48;
  background: #F7F8F9;
}

.c3:active {
  color: #13181D;
  background: #eff2f4;
  font-weight: bold;
}

<div>
  <ul
    class="c0 c1"
  >
    <li>
      <button
        class="sc-AxgMl c2"
      >
        1
      </button>
    </li>
    <li>
      <button
        class="sc-AxgMl c3"
      >
        2
      </button>
    </li>
    <li>
      <button
        class="sc-AxgMl c3"
      >
        3
      </button>
    </li>
    <li>
      <div
        class="c4"
        id="medly-popover-wrapper"
      >
        <button
          class="sc-AxgMl c3"
        >
          ...
        </button>
      </div>
    </li>
    <li>
      <button
        class="sc-AxgMl c3"
      >
        15
      </button>
    </li>
  </ul>
</div>
`;
